--- a/ThesisSelectSystem/ThesisSelectSystem/Views/Login/STLogin.cshtml
+++ b/ThesisSelectSystem/ThesisSelectSystem/Views/Login/STLogin.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -7,12 +6,48 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>STLogin</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <title>毕业选题系统教师与学生登陆</title>
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/system-administrator-login.css" />
 </head>
 <body>
-    <div> 
-        <p>学生与教师登陆界面</p>
+
+    <div class="wrapper">
+
+        <div class="container">
+
+            <h1>欢迎来到毕业选题系统</h1>
+
+            <form class="form">
+
+                <input id="Account" type="text" placeholder="账号" />
+                <input id="Password" type="password" placeholder="密码" />
+                <button id="login-button" type="submit">登录</button>
+
+            </form>
+
+        </div>
+
+        <ul class="bg-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+
+        </ul>
     </div>
+
+    <script src="~/Scripts/jquery-3.1.0.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="~/Scripts/system-teacher-login.js" type="text/javascript" charset="utf-8"></script>
+
 </body>
 </html>
